HOTFIX: Fix font clipping on logo

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,6 +43,9 @@
         background-clip: text;
         color: transparent;
         filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.7)) drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.5));
+        padding: 0.2em 0.1em;
+        line-height: 1.4;
+        display: inline-block;
     }
 }
 
